tests/neg-custom-args/captures/leaked-curried.check
-- Error: tests/neg-custom-args/captures/leaked-curried.scala:13:20 ----------------------------------------------------
13 |        () => () => io // error
   |                    ^^
   |(io : Cap^{cap[main]}) cannot be referenced here; it is not included in the allowed capture set {} of pure base class trait Pure
